fixed the layout issue with masonry

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -652,6 +652,16 @@ div.flash-notification .flash-notice {
 	margin-top: 100px;
 }
 
+/* NEWSFEED */
+
+#timeline {
+	margin: 0 auto;
+	margin-top: 30px;
+}
+.timeline-block {
+	margin: 3px 10px 2px 10px;
+	width: 360px;
+}
 /* FOOTER */
 
 footer {
